--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     height: 50px;
     width: 100%;
     background-color: #717171;
-    margin: 0 0 20px 0;
+    margin: 0 0 30px 0;
 }
 
 .Box2 {
@@ -16,11 +16,11 @@
     width: 50%;
     background-color: #717171;
     margin: auto;
-    margin-bottom: 30px;
+    margin-top: 50px;
 }
 
 .Box3 {
-    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .Box4 {
@@ -37,70 +37,16 @@
     background-color: #717171;
 }
 
+.Box6 {
+    margin: 35px 35px 20px 35px;
+}
+
 .Box7 {
-    height: 150px;
-    width: 23%;
+    height: 290px;
+    width: 290px;
     float: left;
-    margin: 20px 20px;
+    margin: 35px 35px;
     background-color: #717171;
-}
-
-.Box8 {
-    height: 150px;
-    width: 23%;
-    float: left;
-    margin: 20px 10px;
-    background-color: #717171;
-}
-
-.Box9 {
-    height: 150px;
-    width: 23%;
-    float: left;
-    margin: 20px 10px;
-    background-color: #717171;
-}
-
-.Box10 {
-    height: 150px;
-    width: 23%;
-    margin: 20px 10px;
-    float: left;
-    background-color: #717171;
-}
-
-.Box11 {
-    height: 150px;
-    width: 23%;
-    margin: 20px 20px;
-    float: left;
-    background-color: #717171;
-}
-
-.Box12 {
-    height: 150px;
-    width: 23%;
-    margin: 20px 10px;
-    float: left;
-    background-color: #717171;
-
-}
-
-.Box13 {
-    height: 150px;
-    width: 23%;
-    margin: 20px 10px;
-    float: left;
-    background-color: #717171;
-}
-
-.Box14 {
-    height: 150px;
-    width: 23%;
-    margin: 20px 10px;
-    float: left;
-    background-color: #717171;
-
 }
 
 .Box15 {
@@ -108,7 +54,7 @@
     width: 60%;
     background-color: #717171;
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .Box16 {
@@ -129,20 +75,6 @@
 
 .Box18 {
     height: 30px;
-    width: 70%;
-    background-color: #717171;
-    margin: 20px 50px;
-}
-
-.Box19 {
-    height: 100px;
-    width: 70%;
-    background-color: #717171;
-    margin: 20px 50px;
-}
-
-.Box20 {
-    height: 100px;
     width: 70%;
     background-color: #717171;
     margin: 20px 50px;
@@ -196,7 +128,6 @@
     height: 300px;
     width: 100%;
     background-color: #717171;
-    /* margin-bottom: 50px; */
 }
 
 .Box28 {
